@@ -68,6 +68,7 @@ Unreleased : ImpressCMS 1.1 "???" Alpha
 - Added : Ability to use theme_rtl.html for languages with a right to left style. (stranger)
 - Added : Use of theme.php in language files for an easier use of smartys in themes instead of hardcoded texts. (stranger)
 - Added : RTL to install process. (stranger)
+- Added : Feature #1957019: added logging hook. (dave_l)
 
 - Improved : The pm form to use the selected editor. (real_therplima)
 - Improved : XoopsTree::getNicePathFromId has new parameter, allowing specification of the separator between links (skenow)
